# facet-xml

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.md.in  release-plz.toml
.config/captain/: config.styx
.config/captain/readme-templates/: readme-footer.md  readme-header.md
.github/workflows/: test.yml
facet-atom/: README.md
facet-dom/: README.md
facet-dom/src/: naming.rs
facet-dom/src/deserializer/: entrypoints.rs  field_map.rs  mod.rs  struct_deser.rs
facet-dom/src/serializer/: mod.rs  write_scalar.rs
facet-singularize/: README.md
facet-svg/: Cargo.toml  README.md
facet-svg/tests/: roundtrip.rs
facet-xml/: README.md
facet-xml-node/: Cargo.toml  README.md
facet-xml-node/src/: lib.rs  parser.rs
facet-xml-node/tests/: enum_attribute.rs
facet-xml/src/: serializer.rs
facet-xml/tests/: eenum.rs  elements_proxy.rs  elements_proxy_convert_btree_set.rs  elements_proxy_struct_enum.rs  format_specific_proxy.rs  naming_assumptions.rs
