[package]
name = "facet-svg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SVG (Scalable Vector Graphics) serialization for Facet types using facet-xml"
keywords = ["svg", "serialization", "facet", "graphics", "vector"]
categories = ["encoding", "parsing", "graphics"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true }
facet-xml = { workspace = true }

# Tracing (optional - compiles to nothing when disabled)
tracing = { workspace = true, optional = true }

[dev-dependencies]
datatest-stable = "0.3"
rediff = { workspace = true }
facet-testhelpers = { workspace = true }
facet-xml = { workspace = true, features = ["tracing"] }
facet-reflect = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]

[[test]]
name = "roundtrip"
harness = false

[lints]
workspace = true
